// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <ProductCard /> Debe Incrementar en 1 el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Incrementar
  </button>
</div>
`;

exports[`Pruebas en el componente <ProductCard /> Debe de renderizarse correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
